# rpm

./: Cargo.toml  README.md  install.sh  uninstall.sh
src/: args.rs  main.rs
