[package]
name = "rpm"
version = "0.1.0"
authors = ["Dilshad <dilshadplayingminecraft@outlook.com>"]
about = "RPM (Rust project manager) helps you easily create and manage your rust projects"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }
home = "0.5.4"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
