[package]
name = "rpm"
version = "0.1.0"
authors = ["Dilshad <a-rustacean@outlook.com>"]
about = "RPM (Rust project manager) helps you easily create and manage your rust projects"
edition = "2021"

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }
home = "0.5.4"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
